expected/main/core/bitdata/bitdata-defaults6.err
ERROR: "actual/main/core/bitdata/bitdata-defaults6.lc", line 6
sample1 = T [ y = B000 ]  -- wrong type for y
                  ^
Type mismatch: cannot unify "2" with "3"

ERROR: "actual/main/core/bitdata/bitdata-defaults6.lc", line 5
sample  = T [ x = B0000 ] -- no default for y
          ^
Constructor T requires value for field y :: Bit 2

ERROR: Aborting after 2 previously reported errors

